--- a/index.qmd
+++ b/index.qmd
@@ -30,17 +30,21 @@ You can then edit `index.qmd` in your new repository to write your paper. There 
 
 ## Citations and footnotes
 
-Citations can be inserted using `[@simkin2002read]`; e.g. \[@simkin2002read\]. Citations for this paper are kept in `bibliography.bib` in BibTeX format.[^1] For more on footnotes and citations see [this Quarto documentation page](https://quarto.org/docs/authoring/footnotes-and-citations.html).
+Citations can be inserted using `[@simkin2002read]`; e.g. \[@simkin2002read\]. Citations for this paper are kept in `bibliography.bib` in BibTeX format. You can also insert footnotes.[^1] Note that some traditional uses of footnotes (e.g. to include URLs) are unnecessary in JoVI, as you can (and should) instead simply link directly to the URL you want to refer to with an [inline link](https://www.markdownguide.org/basic-syntax/#links).
 
-[^1]: You can also insert footnotes!
+[^1]: Like this one!
+
+For more on footnotes and citations see [this Quarto documentation page](https://quarto.org/docs/authoring/footnotes-and-citations.html).
+
 
 ## Figures and images
 
 Images can be included and for accessibility purposes **should always** have alt text. Alt text of visualizations should provide meaningful descriptions of the visualization.
 
 ``` markdown
-![](images/teaser.svg){fig.alt="Mean expected payoff / optimal payoff for 10 conditions,
-showing an increase over time in most conditions, with dot50 having the highest value of
+![](images/teaser.svg){fig.alt="Mean expected payoff / optimal
+payoff for 10 conditions, showing an increase over time in most
+conditions, with dot50 having the highest value of
 approximately 97% of optimal."}
 ```
 
@@ -49,9 +53,10 @@ approximately 97% of optimal."}
 You can also add captions and figure references using a `:::` block combined with an id prefixed with `#fig-`:
 
 ``` markdown
-:::
-![](images/teaser.svg){fig.alt="Mean expected payoff / optimal payoff for 10 conditions,
-showing an increase over time in most conditions, with dot50 having the highest value of
+::: {#fig-teaser}
+![](images/teaser.svg){fig.alt="Mean expected payoff / optimal
+payoff for 10 conditions, showing an increase over time in most
+conditions, with dot50 having the highest value of
 approximately 97% of optimal."}
 
 Mean expected payoff / optimal payoff for 10 conditions.
@@ -66,9 +71,15 @@ Mean expected payoff / optimal payoff for 10 conditions.
 
 Then you can refer to the above figure in text using `@fig-teaser`; for example:
 
-Refer to @fig-teaser. For the highest-quality output, we recommend using SVG figures if possible.
+Refer to @fig-teaser. For more on cross-references, see the [Quarto page on cross-references](https://quarto.org/docs/authoring/cross-references.html).
 
-Quarto also supports more complex figure layouts and subfigures; see [the Quarto page on figures](https://quarto.org/docs/authoring/figures-and-layout.html). For more on cross-references, see the [Quarto page on cross-references](https://quarto.org/docs/authoring/cross-references.html).
+For the highest-quality output, we recommend using SVG figures if possible.
+
+Quarto also contains classes for more complex figure layouts and subfigures, which we recommend using in most cases if you need more complex layouts; see [the Quarto page on figures](https://quarto.org/docs/authoring/figures-and-layout.html). That said, we encourage exploration of what is possible with online article formats, and you should feel free to experiment so long as the result is archivable, accessible, and readable.
+
+## Body text
+
+The basic body text, header formatting, and basic tags such as links, emphasis, etc should be left as-is except in rare cases (for which you should be able to demonstrate the value of your modifications). That said, we do encourage experimentation with what is possible in this format; some possibilities that just scrath the surface include: using color or other formatting to link text content semantically with figures; using inline figures; experimenting with interactive widgets in text and figures. So long as content retains archivability, accessibility, and readability, we welcome experimentation with the format.
 
 ## Code
 
